--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "rimraf": "^2.5.1"
   },
   "dependencies": {
-    "@reactivex/rxjs": "^5.0.0-beta.2",
+    "@reactivex/rxjs": "5.0.0-beta.2",
     "aws-sdk": "^2.2.39",
     "bluebird": "^3.3.3",
     "debug": "^2.2.0",
